--- a/public/admin/css/styles.css
+++ b/public/admin/css/styles.css
@@ -246,7 +246,7 @@ a:not([href]):not([class]), a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
 }
-
+tr
 pre,
 code,
 kbd,
@@ -255,6 +255,10 @@ samp {
   font-size: 1em;
   direction: ltr /* rtl:ignore */;
   unicode-bidi: bidi-override;
+}
+
+.tabel {
+    border: 1px solid rgb(0, 0, 0);
 }
 
 pre {
@@ -326,7 +330,7 @@ td,
 th {
   border-color: inherit;
   border-style: solid;
-  border-width: 0;
+  border-width: 1;
 }
 
 label {
